# hackerrank-orchestrate-june26

./: .gitignore  INTERVIEW_NOTES.md  STATUS.md  package-lock.json  package.json
code/: .env.example  APPROACH.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
code/api/: README.md  app.py
code/evaluation/: authenticity_eval.py  authenticity_report.md  compare.py  error_analysis.py  evaluation_report.md  experiment_contradicted.py  experiment_strategy.py  experiment_verify.py  gen_fakes.py  main.py  metrics.py
code/src/claimreview/: config.py
code/src/claimreview/adjudicator/: adjudicator.py
code/src/claimreview/authenticity/: __init__.py  detector.py  ensemble.py  factory.py  gemini_detector.py  provenance.py
code/src/claimreview/context/: assembler.py
code/src/claimreview/io/: csv_io.py  images.py
code/src/claimreview/pipeline/: cache.py  retry.py  runner.py  throttle.py  verification.py
code/src/claimreview/prompts/: __init__.py  strategy_a_zero_shot.py  strategy_b_rules_fewshot.py  strategy_c_contradiction_aware.py  strategy_d_image_grounded.py  verification.py
code/src/claimreview/providers/: anthropic_provider.py  base.py  fake_provider.py  gemini_provider.py  openai_provider.py  registry.py
code/src/claimreview/schema/: output_schema.py
code/tests/: conftest.py
code/tests/grounding/: test_grounding.py
code/tests/unit/: test_api.py  test_authenticity.py  test_config.py  test_context.py  test_csv_io.py  test_images.py  test_metrics.py  test_pipeline.py  test_provenance.py  test_providers.py  test_schema.py
(+40 files in other folders)
